attempt to port Zrythm's Track Processor

--- a/AAudioTrack2/src/main/cpp/CMakeLists.txt
+++ b/AAudioTrack2/src/main/cpp/CMakeLists.txt
@@ -8,6 +8,9 @@ add_library(engine SHARED
         ardour/AudioEngine/AudioBackend.cpp
         ardour/AudioEngine/AudioEngine.cpp
         ardour/Backends/AAudio.cpp
+        zrythm/audio/port_identifier.cpp
+        zrythm/audio/port.cpp
+        zrythm/audio/track_processor.cpp
 )
 
 target_link_libraries(engine log aaudio)
