bugfixes, can play 120 audio tracks :)
renamed app to AAudioTrack_Application

Audio Engine can handle 120 simultaneous audio tracks with zero effects playing

increase buffer size from 192 samples to 8192 samples (8k)

Audio is now correctly written to and from buffers

replaced LOGA with LOGA_NO_ARGS, and LOGA_WITH_ARGS

clean up a bit

always compile with -Ofast even in debug builds

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ include ':AAudioTrack2'
 include ':AAudioTrack'
 include ':app'
 rootProject.name = "AAudioTrack"
+include ':AAudioTrack_Application'
