--- a/AAudioTrack_Application/build.gradle
+++ b/AAudioTrack_Application/build.gradle
@@ -4,10 +4,9 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "smallville7123.aaudiotrack"
+        applicationId "smallville7123.aaudiotrack.application"
         minSdkVersion 28
         targetSdkVersion 30
         versionCode 1
@@ -29,12 +28,12 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':AAudioTrack')
+    implementation project(path: ':AAudioTrack2')
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':AAudioTrack')
-    implementation project(path: ':AAudioTrack2')
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
