implement a basic piano roll :)

--- a/AAudioTrack2/src/main/cpp/CMakeLists.txt
+++ b/AAudioTrack2/src/main/cpp/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10.2)
 
 project("AAudioTrack2")
 
-set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   --optimize -Ofast -g3")
+set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   --optimize -O0 -g3")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} --optimize -Ofast -g0")
 
 # https://developer.android.com/ndk/guides/asan#cmake
