--- a/AAudioTrack_Application/build.gradle
+++ b/AAudioTrack_Application/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29 // Play requires Android Q or higher
 
     defaultConfig {
         applicationId "smallville7123.aaudiotrack.application"
-        minSdkVersion 28
-        targetSdkVersion 30
+        minSdkVersion 28 // Android Pie
+        targetSdkVersion 29 // Play requires Android Q or higher
         versionCode 1
         versionName "1.0"
 
