--- a/AAudioTrack2/VstSystem/Taggable/build.gradle
+++ b/AAudioTrack2/VstSystem/Taggable/build.gradle
@@ -1,24 +1,17 @@
-plugins {
-    id 'com.android.library'
-}
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29 // Play requires Android Q or higher
-    buildToolsVersion "29.0.3" // Play requires Android Q or higher
+    compileSdkVersion 29 // Q
+    buildToolsVersion "29.0.2" // Q
 
     defaultConfig {
-        minSdkVersion 28 // Android Pie
-        targetSdkVersion 29 // Play requires Android Q or higher
+        minSdkVersion 28 // P
+        targetSdkVersion 29 // Q
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-        externalNativeBuild {
-            cmake {
-                cppFlags "-std=c++17"
-            }
-        }
     }
 
     buildTypes {
@@ -27,25 +20,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    externalNativeBuild {
-        cmake {
-            path "src/main/cpp/CMakeLists.txt"
-            version "3.10.2"
-        }
-    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
-
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    api project(path: ':AAudioTrack2:VstSystem:VstManager')
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    api 'com.arthenica:mobile-ffmpeg-full-gpl:4.4'
+
 }
