--- a/AAudioTrack2/VstSystem/libOverview/build.gradle
+++ b/AAudioTrack2/VstSystem/libOverview/build.gradle
@@ -3,34 +3,23 @@ plugins {
 }
 
 android {
-    compileSdkVersion 29 // Play requires Android Q or higher
-    buildToolsVersion "29.0.3" // Play requires Android Q or higher
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
-        minSdkVersion 28 // Android Pie
-        targetSdkVersion 29 // Play requires Android Q or higher
+        minSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-        externalNativeBuild {
-            cmake {
-                cppFlags "-std=c++17"
-            }
-        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    externalNativeBuild {
-        cmake {
-            path "src/main/cpp/CMakeLists.txt"
-            version "3.10.2"
         }
     }
     compileOptions {
@@ -44,8 +33,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.+'
-    api project(path: ':AAudioTrack2:VstSystem:VstManager')
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    api 'com.arthenica:mobile-ffmpeg-full-gpl:4.4'
 }
