add Sine Wave Generator plugin

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include ':AAudioTrack2:VstSystem:VstCore'
 include ':AAudioTrack2:VstSystem:libOverview'
 include ':AAudioTrack2:VstSystem:VstManager'
 include ':AAudioTrack2:VstSystem:Taggable'
+include ':simplesinewave'
