--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include ':AAudioTrack2:VstSystem:libOverview'
 include ':AAudioTrack2:VstSystem:VstManager'
 include ':AAudioTrack2:VstSystem:Taggable'
 include ':simplesinewave'
+include ':audioplayer'
