try to use C dirname instead of java impl

--- a/AAudioTrack2/build.gradle
+++ b/AAudioTrack2/build.gradle
@@ -47,10 +47,8 @@ android {
 
 dependencies {
 
-    api project(':AndroidDAW_SDK:Plugin')
-    api project(':AndroidDAW_SDK:VstSystem:VstManager')
+    api project(':AndroidDAW_SDK')
     api project(':ContextMenu')
-
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
