add missing library

--- a/AAudioTrack2/src/main/cpp/CMakeLists.txt
+++ b/AAudioTrack2/src/main/cpp/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} --optimize -Ofast -g0")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../../AndroidDAW_SDK/CMAKE_HELPER ${CMAKE_CURRENT_BINARY_DIR}/CMAKE_HELPER)
 set_AndroidDAW_SDK_ROOT(${CMAKE_CURRENT_SOURCE_DIR}/../../../../AndroidDAW_SDK)
 
+import_library__AndroidDAW_JNI_CPP_API()
 import_library__AndroidDAW_JniHelpers()
 import_library__AndroidDAW_Midi()
 import_library__AndroidDAW_Plugin()
@@ -29,6 +30,7 @@ target_link_libraries(
         engine
         aaudio
         log
+        AndroidDAW_JNI_CPP_API
         AndroidDAW_JniHelpers
         AndroidDAW_Midi
         AndroidDAW_Plugin
