adapt to singleton, add FileView app

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ include ':AndroidDAW_SDK:VstSystem:Taggable'
 include ':audioplayer'
 include ':ContextMenu'
 include ':simplesinewave'
+include ':fileview'
